--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,13 @@
 @import "tailwindcss";
 
+@font-face {
+  font-family: "PressStart2P";
+  src: url("../font/press-start-2p-font/PressStart2P-vaV7.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -10,6 +18,7 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --font-pixel: "PressStart2P", monospace;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -23,4 +32,8 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.font-pixel {
+  font-family: "PressStart2P", monospace;
 }
